[package]
name = "blackjack"
version = "1.2.0"
edition = "2024"
description = "A basic singleplayer Blackjack TUI"
readme = "README.md"
repository = "https://github.com/BioTomateDE/rust-blackjack"
license = "GPL-3"
keywords = ["blackjack", "gambling", "tui"]
categories = ["games"]

[dependencies]
colored = "3.0.0"
rand = "0.9.1"
